--- a/public/css/dash.css
+++ b/public/css/dash.css
@@ -286,7 +286,7 @@ main {
     background-color: #000;
     display: flex;
     font-weight: bold;
-    margin: 20px 10px 10px 0px;
+    margin: 17.4px 10px 0px 0px;
     align-items: center;
 }
 
@@ -297,8 +297,8 @@ main {
 
 .cabecalho-item {
     flex: 1;
-    padding: 5px;
-    border-right: 1px solid #fa0000;
+    padding: 13px;
+    border: 1px solid #A7877A;
     text-align: center;
 }
 
@@ -315,5 +315,7 @@ main {
 }
 
 .linha:hover {
-    background-color: #000;
+    background-color: #a7877ae3;
+    color: #000;
+    transition: all 0.5s;
 }
