--- a/public/css/usuario.css
+++ b/public/css/usuario.css
@@ -5,6 +5,7 @@
 body {
     margin: 0;
     padding: 0;
+    overflow: hidden;
 }
 
 /* HEADER */
@@ -78,6 +79,7 @@ li {
 
 #nome_input {
     margin-top: 8px;
+    margin-right: 10px;
 }
 
 #selectIdade {
@@ -103,7 +105,7 @@ li {
     align-items: center;
     position: relative;
     left: 9rem;
-    top: 270px;
+    top: 200px;
     border-radius: 0.5rem;
 }
 
@@ -157,18 +159,18 @@ h2 {
 .form__span {
     position: absolute;
     left: 1rem;
-    top: 0.8rem;
+    top: 1rem;
     padding: 0 0.5rem;
     cursor: text;
     transition: top 200ms ease-in, left 200ms ease-in, font-size 200ms ease-in;
     background-color: #F1A075;
-    border-radius: 0.5rem;
+    border-radius: 0.2rem;
 }
 
 .form__span1 {
     position: absolute;
     left: 1rem;
-    top: 1.3rem;
+    top: 1.5rem;
     padding: 0 0.5rem;
     cursor: text;
     transition: top 200ms ease-in, left 200ms ease-in, font-size 200ms ease-in;
@@ -188,15 +190,15 @@ reduz o tamanho da label e move para cima
 */
 
 .form__input:focus~.form__span,
-.form__input:not(:placeholder-shown).form__input:not(:focus)~.form__span {
-    top: -0.50rem;
+.form__input:not(:placeholder-shown)~.form__span {
+    top: -0.3rem;
     font-size: 0.8rem;
     left: 0.8rem;
 }
 
 .form__input:focus~.form__span1,
-.form__input:not(:placeholder-shown).form__input:not(:focus)~.form__span {
-    top: 0.1rem;
+.form__input:not(:placeholder-shown)~.form__span1 {
+    top: 0rem; /* Ajuste conforme necessário para consistência visual */
     font-size: 0.8rem;
     left: 0.8rem;
 }
@@ -225,25 +227,39 @@ reduz o tamanho da label e move para cima
     bottom: 20px;
 }
 
-
-.alerta_erro {
+.contentmodal{
+    background-color: #be9a8c;
+    color: #ffffff;
+    margin: 15% auto;
+    padding: 20px;
+    width: 40%;
     display: flex;
-    justify-content: flex-end;
+    flex-direction: column;
+    align-items: center;
+    text-align: justify;
+    margin-top: 20rem;
 }
 
-.card_erro {
+.modal1{
     display: none;
-    background-color: #fff;
-    color: black;
-    width: 230px;
     position: fixed;
-    border-radius: 4px;
-    border: #e6005a 3px solid;
-    padding: 10px;
-    margin-right: 10%;
+    z-index: 10;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color:#676767a9;
 }
 
-.card_erro #mensagem_erro {
-    font-weight: 500;
-    font-size: 20px;
+.modal2{
+    display: none;
+    position: fixed;
+    z-index: 10;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color:#676767a9;
 }
